--- a/index.html
+++ b/index.html
@@ -56,76 +56,61 @@
     <div class="container">
       <div class="row main-content">
         <div class="col-md-8">
-          <h1>Category: Chatbot Development</h1>
+          <h1>About Me</h1>
           <hr>
        <div class="card border-0">
             <div class="p-2">
-              <h3>How much Does it Cost to Develop Chatbot?</h3>
+              <h3>Who Am I?</h3>
             </div>
             <div class="card-header bg-info text-white d-md-flex justify-content-between align-items-center">
               <div>
                 <img class="img-fluid rounded-circle" src="https://placehold.it/40x40">
-                <span>By Ajay Marathe on 11 April 2019</span>
+                <span>By Richard Andrus on 11 October 2020</span>
               </div>
-              <p class="d-inline-block m-0"> <i class="fa fa-tags" aria-hidden="true"></i> Chatbot Developement</p>
+              <p class="d-inline-block m-0"> <i class="fa fa-tags" aria-hidden="true"></i> About Me</p>
             </div>
-              <img class="img-fluid card-img-top" src="img/first-post.jpg">
+              <img class="img-fluid card-img-top" src="img/first_img.jpg" style="width: 50%; height: 50%">
             <div class="card-body">
               <!-- <img src="https://placehold.it/550x250"> -->
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>I am a fourth-year student at UC San Diego finishing my B.S. Computer Science, with a focus on Big Data systems. This field includes everything from databases, cloud systems, networking, parallelism, machine learning and more, and I've gained experience with these subjects both here at UCSD and from internships. So far, I've worked at the Statistical Visual Computing Lab at UCSD creating data visualization tools; at Knowt, where I developed text analysis algorithms; and at Qualcomm, where I built data pipelines for machine learning. After graduating, I hope to continue working at Qualcomm and developing my skills as a data engineer.</p>
               <a href="#" class="btn btn-success">Read More</a>
             </div>
           </div>
           <hr>
           <div class="card border-0">
             <div class="p-2">
-              <h3>How much Does it Cost to Develop Chatbot?</h3>
+              <h3>Where I'm From</h3>
             </div>
             <div class="card-header bg-info text-white d-md-flex justify-content-between align-items-center">
               <div>
                 <img class="img-fluid rounded-circle" src="https://placehold.it/40x40">
-                <span>By Ajay Marathe on 11 April 2019</span>
+                <span>By Richard Andrus on 11 October 2020</span>
               </div>
-              <p class="d-inline-block m-0"> <i class="fa fa-tags" aria-hidden="true"></i> Chatbot Developement</p>
+              <p class="d-inline-block m-0"> <i class="fa fa-tags" aria-hidden="true"></i> About Me</p>
             </div>
-              <img class="img-fluid card-img-top" src="img/first-post.jpg">
+              <img class="img-fluid card-img-top" src="img/second_img.jpg">
             <div class="card-body">
               <!-- <img src="https://placehold.it/550x250"> -->
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>I'm currently living in Phelan California, a small town in the mountains northeast of Los Angeles. Surrounded by Joshua trees and bumpy dirt roads, I live here with my family while studying remotely during the COVID-19 pandemic. I am originally from Paso Robles, in the wine country of California's central coast, and I lived in Tennessee for several years prior to starting at UCSD. </p>
               <a href="#" class="btn btn-success">Read More</a>
             </div>
           </div>
           <hr>
           <div class="card border-0">
             <div class="p-2">
-              <h3>How much Does it Cost to Develop Chatbot?</h3>
+              <h3>Personal Life</h3>
             </div>
             <div class="card-header bg-info text-white d-md-flex justify-content-between align-items-center">
               <div>
                 <img class="img-fluid rounded-circle" src="https://placehold.it/40x40">
-                <span>By Ajay Marathe on 11 April 2019</span>
+                <span>By Richard Andrus on 11 October 2020</span>
               </div>
-              <p class="d-inline-block m-0"> <i class="fa fa-tags" aria-hidden="true"></i> Chatbot Developement</p>
+              <p class="d-inline-block m-0"> <i class="fa fa-tags" aria-hidden="true"></i> About Me</p>
             </div>
-              <img class="img-fluid card-img-top" src="img/first-post.jpg">
+              <img class="img-fluid card-img-top" src="img/third_img.jpg">
             <div class="card-body">
               <!-- <img src="https://placehold.it/550x250"> -->
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Before the pandemic I also taught swimming, drove for Uber and Lyft, and tutored fellow computer science students. I enjoy theater and I can't wait to return to the theater scene at UCSD and La Jolla. In the meantime, I enjoy hiking, running and camping where I currently live near the mountains. I am part of Alpha Lambda Mu, the first and only Muslim-interest fraternity in the United States, and I'm grateful for my fellow brothers and the connections I've made here in San Diego.</p>
               <a href="#" class="btn btn-success">Read More</a>
             </div>
           </div>
